--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <input type="search" name="Search" placeholder="Search..." class="search__input">
     <input type="password" name="Password" placeholder="Password..." class="pass__input">
     <input type="number" name="" placeholder="Number..." class="num__input">
+    <input type="url" name="" placeholder="Enter URL..." class="url__input">
 </body>
 </html>
